142. Building and compiling a TensorFlow Hub feature extraction model

--- a/04_transfer_learning_in_tensorflow-part1_feature_extraction.ipynb
+++ b/04_transfer_learning_in_tensorflow-part1_feature_extraction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "04_transfer_learning_in_tensorflow-part1_feature_extraction",
       "provenance": [],
-      "authorship_tag": "ABX9TyNu04tq7vRcH0wCkF79j2ty",
+      "authorship_tag": "ABX9TyMvY02IbvE92i3ErLBMQA7I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -334,24 +334,165 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Uz76mHMts6-I"
+        "id": "wORatJCtDNEo"
       },
       "source": [
-        "import tensorflow_hub as hub"
+        "# Let's compare the following two models\n",
+        "resnet_url = \"https://tfhub.dev/google/imagenet/resnet_v2_50/feature_vector/5\"\n",
+        "\n",
+        "efficientnet_url = \"https://tfhub.dev/tensorflow/efficientnet/b0/feature-vector/1\"\n"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wORatJCtDNEo"
+        "id": "Oh_cAIMDHpyn",
+        "outputId": "17a567ee-c1ce-4da6-b601-458a73346d2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "IMG_SHAPE + (3,)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(224, 224, 3)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iETsMitDFzra"
+      },
+      "source": [
+        "# Import dependencies\n",
+        "import tensorflow as tf\n",
+        "import tensorflow_hub as hub\n",
+        "from tensorflow.keras import layers"
+      ],
+      "execution_count": 10,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2eEZofXQF_-y"
+      },
+      "source": [
+        "# Let's make a create_model() function to create model from a URL\n",
+        "def create_model(model_url, num_classes=10) :\n",
+        "  \"\"\"\n",
+        "  Take a tensorflow hub url and creates a Keras Sequential model with it.\n",
+        "\n",
+        "  Args:\n",
+        "    model_url(str) : A TensorFlow Hub feature extraction URL.\n",
+        "    num_classes(int) : Number of output neurons in the output layer,\n",
+        "      should be equal to number of target classes, default to 10.\n",
+        "  Returns :\n",
+        "    An uncompiled Keras Sequential mdoel with model_url as feature extractor \n",
+        "    layer and Dense output layer with num_classes output neurons.\n",
+        "  \"\"\"\n",
+        "\n",
+        "  # Download the pretrained model and saves it as a Keras layer\n",
+        "  feature_extractor_layer = hub.KerasLayer(model_url, \n",
+        "                                           trainable=False, # freeze the already learned patterns\n",
+        "                                           name=\"feature_extraction_layer\",\n",
+        "                                           input_shape = IMG_SHAPE + (3, ))\n",
+        "  \n",
+        "  # Create our own model\n",
+        "  model = tf.keras.Sequential([\n",
+        "          feature_extractor_layer,\n",
+        "          layers.Dense(num_classes, activation=\"softmax\", name=\"output_layer\")\n",
+        "  ])\n",
+        "\n",
+        "  return model"
+      ],
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CH9u-eknLJjq"
+      },
+      "source": [
+        "### Creating and testing ResNet TensorFlow Hub Feature Extraction model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4ICje2kpLBV-"
+      },
+      "source": [
+        "# Create Resnet model\n",
+        "resnet_model = create_model(resnet_url,\n",
+        "                            num_classes=train_data_10_percent.num_classes)"
+      ],
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MjDLKdi8MJU0"
+      },
+      "source": [
+        "# Compile our resnet model\n",
+        "resnet_model.compile(loss = \"categorical_crossentropy\",\n",
+        "                      optimizer=tf.keras.optimizers.Adam(),\n",
+        "                      metrics=[\"accuracy\"])"
+      ],
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h7VZfO5vMhNe",
+        "outputId": "902b3f1a-74b9-478f-e1af-e59157f2975b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "resnet_model.summary()"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential_2\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "feature_extraction_layer (Ke (None, 2048)              23564800  \n",
+            "_________________________________________________________________\n",
+            "output_layer (Dense)         (None, 10)                20490     \n",
+            "=================================================================\n",
+            "Total params: 23,585,290\n",
+            "Trainable params: 20,490\n",
+            "Non-trainable params: 23,564,800\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
