--- a/04_transfer_learning_in_tensorflow-part1_feature_extraction.ipynb
+++ b/04_transfer_learning_in_tensorflow-part1_feature_extraction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "04_transfer_learning_in_tensorflow-part1_feature_extraction",
       "provenance": [],
-      "authorship_tag": "ABX9TyMvY02IbvE92i3ErLBMQA7I",
+      "authorship_tag": "ABX9TyOLRDteQRCI6xBYv47tj+rW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fdce4f5d-2d08-4590-ab79-160285033b26"
+        "outputId": "73bf07fa-e408-4e81-ac32-ee2caa8a4d06"
       },
       "source": [
         "# Are we using a GPU?\n",
@@ -61,7 +61,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Mon Jul 12 00:08:22 2021       \n",
+            "Mon Jul 12 01:06:17 2021       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 470.42.01    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -70,7 +70,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   64C    P8    11W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
+            "| N/A   54C    P8    10W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -102,7 +102,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "017306d4-2bc4-4336-bf07-ce42ad113d1d"
+        "outputId": "07140553-ee9f-4fca-b3e1-42033bb956e0"
       },
       "source": [
         "# Get data(10% of food classes from Food101) https://www.kaggle.com/dansbecker/food-101\n",
@@ -121,16 +121,16 @@
         {
           "output_type": "stream",
           "text": [
-            "--2021-07-12 00:08:22--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 173.194.203.128, 74.125.199.128, 74.125.20.128, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|173.194.203.128|:443... connected.\n",
+            "--2021-07-12 01:06:18--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.195.128, 74.125.142.128, 2607:f8b0:400e:c00::80, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.195.128|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 168546183 (161M) [application/zip]\n",
-            "Saving to: ‘10_food_classes_10_percent.zip’\n",
+            "Saving to: ‘10_food_classes_10_percent.zip.1’\n",
             "\n",
-            "10_food_classes_10_ 100%[===================>] 160.74M   185MB/s    in 0.9s    \n",
+            "10_food_classes_10_ 100%[===================>] 160.74M   182MB/s    in 0.9s    \n",
             "\n",
-            "2021-07-12 00:08:23 (185 MB/s) - ‘10_food_classes_10_percent.zip’ saved [168546183/168546183]\n",
+            "2021-07-12 01:06:19 (182 MB/s) - ‘10_food_classes_10_percent.zip.1’ saved [168546183/168546183]\n",
             "\n"
           ],
           "name": "stdout"
@@ -144,7 +144,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bee6d4ce-2741-418c-dbe8-0493d82dff22"
+        "outputId": "e6293251-36b4-405e-f908-0bf209445b9a"
       },
       "source": [
         "# How many images in each folder\n",
@@ -204,7 +204,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GBIAJU-i8eIt",
-        "outputId": "3efd6c0f-6228-4e81-8e37-87f7dce2f1d1"
+        "outputId": "dae67083-742b-42a0-9850-1fea15d42578"
       },
       "source": [
         "# Setup data inputs\n",
@@ -254,7 +254,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AWMEnZ859nmm",
-        "outputId": "922706d6-5f19-4e70-e147-e016f6115a35"
+        "outputId": "2f2830f1-9ef2-4d90-fb01-6585957587bc"
       },
       "source": [
         "len(train_data_10_percent), len(test_data)"
@@ -300,8 +300,8 @@
         "import datetime\n",
         "\n",
         "def create_tensorboard_callback(dir_name, experiment_name) :\n",
-        "  log_dir = dir_name + \"/\" + experiment_name + \"/\" + datetime.datetime.now().strftime(\"%Y&m&d-%H%M%S\")\n",
-        "  tensorboard_callback = tf.keras.callback.TensorBoard(log_dir=log_dir)\n",
+        "  log_dir = dir_name + \"/\" + experiment_name + \"/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+        "  tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir)\n",
         "  print(f\"Saving TensorBoard log file to: {log_dir}\")\n",
         "  return tensorboard_callback"
       ],
@@ -342,22 +342,22 @@
         "\n",
         "efficientnet_url = \"https://tfhub.dev/tensorflow/efficientnet/b0/feature-vector/1\"\n"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Oh_cAIMDHpyn",
-        "outputId": "17a567ee-c1ce-4da6-b601-458a73346d2e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "76ae4cfd-dcdc-4a60-f56e-52c547bb5322"
       },
       "source": [
         "IMG_SHAPE + (3,)"
       ],
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -369,7 +369,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 8
         }
       ]
     },
@@ -384,7 +384,7 @@
         "import tensorflow_hub as hub\n",
         "from tensorflow.keras import layers"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -421,7 +421,7 @@
         "\n",
         "  return model"
       ],
-      "execution_count": 21,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -443,7 +443,7 @@
         "resnet_model = create_model(resnet_url,\n",
         "                            num_classes=train_data_10_percent.num_classes)"
       ],
-      "execution_count": 22,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -457,27 +457,27 @@
         "                      optimizer=tf.keras.optimizers.Adam(),\n",
         "                      metrics=[\"accuracy\"])"
       ],
-      "execution_count": 26,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "h7VZfO5vMhNe",
-        "outputId": "902b3f1a-74b9-478f-e1af-e59157f2975b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "86d5ce51-71b1-4369-8b9e-3de1e332ce44"
       },
       "source": [
         "resnet_model.summary()"
       ],
-      "execution_count": 27,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential_2\"\n",
+            "Model: \"sequential\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
@@ -493,6 +493,67 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6wEqVEL2P6bq",
+        "outputId": "65971723-02f8-422e-e1f4-a6100d4d32a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "resnet_history = resnet_model.fit(train_data_10_percent, \n",
+        "                                  epochs=5, \n",
+        "                                  steps_per_epoch=len(train_data_10_percent),\n",
+        "                                  validation_data=test_data,\n",
+        "                                  validation_steps=len(test_data),\n",
+        "                                  callbacks=[create_tensorboard_callback(dir_name=\"tensorflow_hub\",\n",
+        "                                                                         experiment_name=\"resnet50V2\")])"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Saving TensorBoard log file to: tensorflow_hub/resnet50V2/20210712-010747\n",
+            "Epoch 1/5\n",
+            "24/24 [==============================] - 25s 821ms/step - loss: 1.9801 - accuracy: 0.3200 - val_loss: 1.2210 - val_accuracy: 0.6024\n",
+            "Epoch 2/5\n",
+            "24/24 [==============================] - 16s 682ms/step - loss: 0.9138 - accuracy: 0.7293 - val_loss: 0.8436 - val_accuracy: 0.7304\n",
+            "Epoch 3/5\n",
+            "24/24 [==============================] - 16s 678ms/step - loss: 0.6188 - accuracy: 0.8293 - val_loss: 0.7542 - val_accuracy: 0.7588\n",
+            "Epoch 4/5\n",
+            "24/24 [==============================] - 16s 679ms/step - loss: 0.4772 - accuracy: 0.8720 - val_loss: 0.6980 - val_accuracy: 0.7788\n",
+            "Epoch 5/5\n",
+            "24/24 [==============================] - 16s 679ms/step - loss: 0.3762 - accuracy: 0.9120 - val_loss: 0.6665 - val_accuracy: 0.7804\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lAa2o7LYQnKK"
+      },
+      "source": [
+        "wow! \n",
+        "\n",
+        "That is incredible. Our transfer learning feature exxtractor mdoel out performed ALL of the previous models we built by hand... (substantially) and in a quicker training time AND with only 10% of the training examples.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1fXvVrqpRwZB"
+      },
+      "source": [
+        "# Let's create a function plot our loss curves..."
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
