147. Comparing Our Model's Results

--- a/04_transfer_learning_in_tensorflow-part1_feature_extraction.ipynb
+++ b/04_transfer_learning_in_tensorflow-part1_feature_extraction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "04_transfer_learning_in_tensorflow-part1_feature_extraction",
       "provenance": [],
-      "authorship_tag": "ABX9TyNN/kXuTU8O7+zSEPSF3rLm",
+      "authorship_tag": "ABX9TyNvQ4S4om/Jq7IiR5Uj361I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -802,11 +802,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vJRG9TX8FjJn",
-        "outputId": "6a1b175c-9df7-42ae-b78f-58b79f625933",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vJRG9TX8FjJn",
+        "outputId": "6a1b175c-9df7-42ae-b78f-58b79f625933"
       },
       "source": [
         "# Check how many layers Efficientnetb0 feature extractor have?\n",
@@ -847,8 +847,131 @@
         "id": "1XypkD6IxqWq"
       },
       "source": [
-        "## Comparing our mdoel results using TensorBoard"
+        "## Comparing our model results using TensorBoard\n",
+        "\n",
+        "> **Note** : When you upload things to TensorBoard.dev, your experiments are public. So if yo're running private experiments(things you don't want others to see) do not upload them to TensorBoard."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CqNWpg012oYp",
+        "outputId": "c11feed7-dd8f-47d1-916a-c6214126310a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Upload TensorBoard dev records\n",
+        "!tensorboard dev upload --logdir ./tensorflow_hub/ \\\n",
+        "        --name \"EfficientNetB0 vs. ResNet50V2\" \\\n",
+        "        --description \"Comparing two different TF Hub feature extraction model architecture using 10% of the training data \" \\\n",
+        "        --one_shot"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2021-07-12 18:17:14.814622: I tensorflow/stream_executor/platform/default/dso_loader.cc:53] Successfully opened dynamic library libcudart.so.11.0\n",
+            "Data for the \"text\" plugin is now uploaded to TensorBoard.dev! Note that uploaded data is public. If you do not want to upload data for this plugin, use the \"--plugins\" command line argument.\n",
+            "\n",
+            "New experiment created. View your TensorBoard at: https://tensorboard.dev/experiment/MNrmZfOYRtGXxvptnWmzpQ/\n",
+            "\n",
+            "\u001b[1m[2021-07-12T18:17:16]\u001b[0m Started scanning logdir.\n",
+            "\u001b[1m[2021-07-12T18:17:18]\u001b[0m Total uploaded: 60 scalars, 0 tensors, 2 binary objects (5.7 MB)\n",
+            "\u001b[1m[2021-07-12T18:17:18]\u001b[0m Done scanning logdir.\n",
+            "\n",
+            "\n",
+            "Done. View your TensorBoard at https://tensorboard.dev/experiment/MNrmZfOYRtGXxvptnWmzpQ/\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EvOvDIcB63fr"
+      },
+      "source": [
+        "Our TensorBoard experiments are uploaded publically here https://tensorboard.dev/experiment/Yl3sahlyRkuKMW8Cyy2MKw/"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CGSTOQ2M7o0t",
+        "outputId": "e29bcfaa-02b0-4666-fb33-13ba6518c7b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check out what TensorBoard experiments you have\n",
+        "!tensorboard dev list"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2021-07-12 18:17:25.602315: I tensorflow/stream_executor/platform/default/dso_loader.cc:53] Successfully opened dynamic library libcudart.so.11.0\n",
+            "Data for the \"text\" plugin is now uploaded to TensorBoard.dev! Note that uploaded data is public. If you do not want to upload data for this plugin, use the \"--plugins\" command line argument.\n",
+            "https://tensorboard.dev/experiment/MNrmZfOYRtGXxvptnWmzpQ/\n",
+            "\tName                 EfficientNetB0 vs. ResNet50V2\n",
+            "\tDescription          Comparing two different TF Hub feature extraction model architecture using 10% of the training data \n",
+            "\tId                   MNrmZfOYRtGXxvptnWmzpQ\n",
+            "\tCreated              2021-07-12 18:17:16 (16 seconds ago)\n",
+            "\tUpdated              2021-07-12 18:17:18 (14 seconds ago)\n",
+            "\tRuns                 4\n",
+            "\tTags                 5\n",
+            "\tScalars              60\n",
+            "\tTensor bytes         0\n",
+            "\tBinary object bytes  5963064\n",
+            "Total: 1 experiment(s)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "acujhG-k72zC",
+        "outputId": "cd61dd1a-54e2-4fa2-cf86-4e1b2f527f6f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Delete an experiment\n",
+        "#!tensorboard dev delete --experiment_id MNrmZfOYRtGXxvptnWmzpQ"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2021-07-12 18:17:05.683597: I tensorflow/stream_executor/platform/default/dso_loader.cc:53] Successfully opened dynamic library libcudart.so.11.0\n",
+            "Data for the \"text\" plugin is now uploaded to TensorBoard.dev! Note that uploaded data is public. If you do not want to upload data for this plugin, use the \"--plugins\" command line argument.\n",
+            "Deleted experiment Yl3sahlyRkuKMW8Cyy2MKw.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AxwHFhnV8MTi"
+      },
+      "source": [
+        "# Confirm the deletion by re-checking what experiments you have left\n",
+        "!tensorboard dev list"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
