150. Importing a script full of helper functions (and saving lots of space)

--- a/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
+++ b/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "05_transfer_learning_in_tensorflow-part2_fine_tuning",
       "provenance": [],
-      "authorship_tag": "ABX9TyPAHVc8u5xREi1fRHmpjYs1",
+      "authorship_tag": "ABX9TyPD4AvkrMYxx2590dc43bDP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,8 +34,130 @@
         "id": "-8fbclEDHYdu"
       },
       "source": [
-        "001"
+        "# Transfer Learning with TensorFlow 2 : Fine-Tuning\n",
+        "\n",
+        "In the previous notebook, we covered transfer learning feature extraction, now it's time to learn about a new kind of transfer learning : fine-tuning"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SUpZSP-wnclf",
+        "outputId": "867538fa-e212-4082-e530-2720b242c80a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check if we're using a GPU\n",
+        "!nvidia-smi"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Tue Jul 13 02:07:19 2021       \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 470.42.01    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
+            "|-------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                               |                      |               MIG M. |\n",
+            "|===============================+======================+======================|\n",
+            "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   57C    P8     9W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
+            "|                               |                      |                  N/A |\n",
+            "+-------------------------------+----------------------+----------------------+\n",
+            "                                                                               \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| Processes:                                                                  |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+            "|        ID   ID                                                   Usage      |\n",
+            "|=============================================================================|\n",
+            "|  No running processes found                                                 |\n",
+            "+-----------------------------------------------------------------------------+\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LUuEdLejnPAy"
+      },
+      "source": [
+        "## Creating helper functions\n",
+        "In previous notebooks, we created a bunch of helper functions, now we could rewrite them all, however this is tedious.\n",
+        "\n",
+        "So, it's a good idea to put functions you'll want to use again in a script you can download some of the functions we've used previously here : https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Dnl3ZeqfoK8p",
+        "outputId": "c714890f-11c1-46fa-d992-ec32668fc246",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!wget https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py\n"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2021-07-13 02:10:00--  https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 10246 (10K) [text/plain]\n",
+            "Saving to: ‘helper_functions.py’\n",
+            "\n",
+            "\rhelper_functions.py   0%[                    ]       0  --.-KB/s               \rhelper_functions.py 100%[===================>]  10.01K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2021-07-13 02:10:00 (76.2 MB/s) - ‘helper_functions.py’ saved [10246/10246]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5N4QHs-LoPN1"
+      },
+      "source": [
+        "# Import helper functions we're going to use in this notebook\n",
+        "from helper_functions import create_tensorboard_callback, plot_loss_curves, unzip_data, walk_through_dir"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OU7bj8Bgos2X"
+      },
+      "source": [
+        "> **Note** : If you're running this notebook in Google Colab, when it times out Colab will delete `helper functions`, so you'll have to re-download it if you want access to your helper functions."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tv4LSf_Lq1tt"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
