--- a/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
+++ b/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "05_transfer_learning_in_tensorflow-part2_fine_tuning",
       "provenance": [],
-      "authorship_tag": "ABX9TyPD4AvkrMYxx2590dc43bDP",
+      "authorship_tag": "ABX9TyMPwWCJcdyTCxMQJH7/XjTt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,11 +42,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SUpZSP-wnclf",
-        "outputId": "867538fa-e212-4082-e530-2720b242c80a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SUpZSP-wnclf",
+        "outputId": "867538fa-e212-4082-e530-2720b242c80a"
       },
       "source": [
         "# Check if we're using a GPU\n",
@@ -97,11 +97,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Dnl3ZeqfoK8p",
-        "outputId": "c714890f-11c1-46fa-d992-ec32668fc246",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Dnl3ZeqfoK8p",
+        "outputId": "c714890f-11c1-46fa-d992-ec32668fc246"
       },
       "source": [
         "!wget https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py\n"
@@ -149,15 +149,73 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "tv4LSf_Lq1tt"
       },
       "source": [
-        ""
+        "## Let's get some data\n",
+        "\n",
+        "This time we're going to see how we can use the pre-trained models within `tf.keras.applications`  (recognizing images of food)\n",
+        " link : https://www.tensorflow.org/api_docs/python/tf/keras/applications"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NvNzGBXZq_AK",
+        "outputId": "a4a22cb4-d6c1-4c60-ec4e-967af1df616c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Get 10% of training data of 10 classes of Food101\n",
+        "!wget https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
+        "\n",
+        "unzip_data(\"10_food_classes_10_percent.zip\")"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2021-07-13 02:29:50--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 142.251.2.128, 142.250.141.128, 2607:f8b0:4023:c0b::80, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|142.251.2.128|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 168546183 (161M) [application/zip]\n",
+            "Saving to: ‘10_food_classes_10_percent.zip’\n",
+            "\n",
+            "10_food_classes_10_ 100%[===================>] 160.74M   178MB/s    in 0.9s    \n",
+            "\n",
+            "2021-07-13 02:29:51 (178 MB/s) - ‘10_food_classes_10_percent.zip’ saved [168546183/168546183]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d4HzKzjbsyCR"
+      },
+      "source": [
+        "# Check out how many image and subdirectories are in our dataset\n",
+        "walk_through_dir(\"10_food_classes_10_percent\")"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZpJc_gZpr732"
+      },
+      "source": [
+        ""
+      ]
     }
   ]
 }
