156. Getting a feature vector from our trained model

--- a/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
+++ b/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "05_transfer_learning_in_tensorflow-part2_fine_tuning",
       "provenance": [],
-      "authorship_tag": "ABX9TyNDzmvUDFxOxltZqnwO1lS5",
+      "authorship_tag": "ABX9TyOu/NvJc3qhoVQuShVLRTB6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1771,11 +1771,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FR8-ToIXciCa",
-        "outputId": "3463c321-73e0-4259-abcd-5a8fc02b17ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FR8-ToIXciCa",
+        "outputId": "3463c321-73e0-4259-abcd-5a8fc02b17ea"
       },
       "source": [
         "# Define the input shape\n",
@@ -1834,11 +1834,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Oq_GKJ2Bc8l3",
-        "outputId": "15c15997-ee81-4b39-8e24-9c1a4bbc4edf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Oq_GKJ2Bc8l3",
+        "outputId": "15c15997-ee81-4b39-8e24-9c1a4bbc4edf"
       },
       "source": [
         "# Let's replicate the GlobalAveragePool2D layer\n",
@@ -1863,7 +1863,25 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "moTtWX6ZfQKj"
+      },
+      "source": [
+        "> **Practice** Try to do the same with the above two cells but this time use `GlobalMaxPool2D`... and see what happens."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "ZpJc_gZpr732"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5FKu7wbPfmvn"
       },
       "source": [
         ""
