--- a/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
+++ b/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "05_transfer_learning_in_tensorflow-part2_fine_tuning",
       "provenance": [],
-      "authorship_tag": "ABX9TyOu/NvJc3qhoVQuShVLRTB6",
+      "authorship_tag": "ABX9TyPv3f1uDVDumOgKvry4OR6J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1866,25 +1866,101 @@
         "id": "moTtWX6ZfQKj"
       },
       "source": [
-        "> **Practice** Try to do the same with the above two cells but this time use `GlobalMaxPool2D`... and see what happens."
+        "> **Practice** Try to do the same with the above two cells but this time use `GlobalMaxPool2D`... and see what happens.\n",
+        "\n",
+        "**Note** : One of the reasons feature extraction transfer learning is named how it is because what often happens is pretrained model outputs a **feature vector** a long tensor of numbers which represents the learned representation of the model on a particular sample, in our case, this is the output of the `tf.keras.layers.GlobalAveragePooling2D()` layer) which can then be used to extract patterns our of for our own specific problem."
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "ZpJc_gZpr732"
+        "id": "BwZArbp0ipXM",
+        "outputId": "962df4a6-c057-4961-9cf1-e44fb5ee67ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "# Let's try the same with GlobalMaxPool2D\n",
+        "\n",
+        "input_shape=(1, 4, 4, 3)\n",
+        "\n",
+        "# Create a random tensor \n",
+        "tf.random.set_seed(42)\n",
+        "input_tensor = tf.random.normal(input_shape)\n",
+        "print(f\"Random input tensor : \\n {input_tensor} \\n\")\n",
+        "\n",
+        "# Pass the random tensor to GlobalMaxPool2D\n",
+        "global_max_pool_tensor = tf.keras.layers.GlobalMaxPool2D()(input_tensor)\n",
+        "print(f\"Global Max Pool tensor : \\n {global_max_pool_tensor} \\n\")\n",
+        "\n",
+        "# Compare the shape\n",
+        "print(f\"Shape of input tensor : {input_tensor.shape}\")\n",
+        "print(f\"Shape of GlobalMaxPool tensor : {global_max_pool_tensor.shape}\")\n"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Random input tensor : \n",
+            " [[[[ 0.3274685  -0.8426258   0.3194337 ]\n",
+            "   [-1.4075519  -2.3880599  -1.0392479 ]\n",
+            "   [-0.5573232   0.539707    1.6994323 ]\n",
+            "   [ 0.28893656 -1.5066116  -0.2645474 ]]\n",
+            "\n",
+            "  [[-0.59722406 -1.9171132  -0.62044144]\n",
+            "   [ 0.8504023  -0.40604794 -3.0258412 ]\n",
+            "   [ 0.9058464   0.29855987 -0.22561555]\n",
+            "   [-0.7616443  -1.8917141  -0.93847126]]\n",
+            "\n",
+            "  [[ 0.77852213 -0.47338897  0.97772694]\n",
+            "   [ 0.24694404  0.20573747 -0.5256233 ]\n",
+            "   [ 0.32410017  0.02545409 -0.10638497]\n",
+            "   [-0.6369475   1.1603122   0.2507359 ]]\n",
+            "\n",
+            "  [[-0.41728503  0.4012578  -1.4145443 ]\n",
+            "   [-0.5931857  -1.6617213   0.33567193]\n",
+            "   [ 0.10815629  0.23479682 -0.56668764]\n",
+            "   [-0.35819843  0.88698614  0.52744764]]]] \n",
+            "\n",
+            "Global Max Pool tensor : \n",
+            " [[0.9058464 1.1603122 1.6994323]] \n",
+            "\n",
+            "Shape of input tensor : (1, 4, 4, 3)\n",
+            "Shape of GlobalMaxPool tensor : (1, 3)\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "5FKu7wbPfmvn"
+        "id": "73-OExrQkJi1",
+        "outputId": "6c532b22-b03e-4adb-a427-552ca71ce46e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "# Let's replicate the GlobalMaxPool2D layer\n",
+        "tf.reduce_max(input_tensor, axis=[1, 2])"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(1, 3), dtype=float32, numpy=array([[0.9058464, 1.1603122, 1.6994323]], dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
       ]
     }
   ]
