158. Downloading and preparing the data for Model 1 (1 percent of training data)

--- a/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
+++ b/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "05_transfer_learning_in_tensorflow-part2_fine_tuning",
       "provenance": [],
-      "authorship_tag": "ABX9TyPOXd+WivKYxrAAM4R14Z+R",
+      "authorship_tag": "ABX9TyOVz24hkYds5Fw6OcHnS9hD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1982,13 +1982,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7CGNdKuI0RQO"
+      },
+      "source": [
+        "### Getting and preprocessing data for model_1"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "wdh-avF9ywmT",
-        "outputId": "dac7d82c-fc8f-4bbb-b727-e2903eebf03d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wdh-avF9ywmT",
+        "outputId": "dac7d82c-fc8f-4bbb-b727-e2903eebf03d"
       },
       "source": [
         "# Download and unzip data - preprocessed from Food101\n",
@@ -2028,23 +2037,23 @@
         "train_dir_1_percent = \"10_food_classes_1_percent/train\"\n",
         "test_dir_1_percent = \"10_food_classes_1_percent/test\""
       ],
-      "execution_count": 24,
+      "execution_count": 26,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lXdsNO8kz58Q",
-        "outputId": "ef8dfaa0-7267-4109-fa24-38e75fe749e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lXdsNO8kz58Q",
+        "outputId": "adc1ee3d-abf5-49bb-ec77-93592186a69a"
       },
       "source": [
         "# How many images we are working with \n",
         "walk_through_dir(\"10_food_classes_1_percent\")"
       ],
-      "execution_count": 25,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -2076,6 +2085,51 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1wRrQeFD0M4x",
+        "outputId": "d9c2a629-377f-4eb8-b2fc-bcd3fa7d909c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Setup Data Loaders\n",
+        "IMG_SIZE = (224, 224)\n",
+        "train_data_1_percent = tf.keras.preprocessing.image_dataset_from_directory(train_dir_1_percent,\n",
+        "                                                                           label_mode=\"categorical\",\n",
+        "                                                                           image_size=IMG_SIZE,\n",
+        "                                                                           batch_size=BATCH_SIZE) # default = 32\n",
+        "\n",
+        "test_data = tf.keras.preprocessing.image_dataset_from_directory(test_dir_1_percent,\n",
+        "                                                                image_size=IMG_SIZE,\n",
+        "                                                                batch_size=BATCH_SIZE,\n",
+        "                                                                label_mode=\"categorical\")"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 70 files belonging to 10 classes.\n",
+            "Found 2500 files belonging to 10 classes.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8eOWaMWl1WFY"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
