159. Building a data augmentation layer to use inside our model

--- a/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
+++ b/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "05_transfer_learning_in_tensorflow-part2_fine_tuning",
       "provenance": [],
-      "authorship_tag": "ABX9TyOVz24hkYds5Fw6OcHnS9hD",
+      "authorship_tag": "ABX9TyPSoyDUmmLwq8dsA06CJ0h2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1969,7 +1969,7 @@
         "id": "NtZIt1wlx2cQ"
       },
       "source": [
-        "## Running a series of transfer learning experiments\n",
+        "# Running a series of transfer learning experiments\n",
         "We've seen the incredible results transfer learning can get with only 10% od the training data , but how does it go with 1% of the training data... how about we set up a bunch of experiemnts to find out:\n",
         "\n",
         "\n",
@@ -1987,7 +1987,7 @@
         "id": "7CGNdKuI0RQO"
       },
       "source": [
-        "### Getting and preprocessing data for model_1"
+        "## Getting and preprocessing data for model_1"
       ]
     },
     {
@@ -2089,11 +2089,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1wRrQeFD0M4x",
-        "outputId": "d9c2a629-377f-4eb8-b2fc-bcd3fa7d909c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1wRrQeFD0M4x",
+        "outputId": "d9c2a629-377f-4eb8-b2fc-bcd3fa7d909c"
       },
       "source": [
         "# Setup Data Loaders\n",
@@ -2121,14 +2121,48 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "8eOWaMWl1WFY"
       },
       "source": [
-        ""
+        "## Adding Data Augmentation right into model \n",
+        "To add data augmentation right into our models, we can use layers inside :\n",
+        " * `tf.keras.layers.experimental.preprocessing()`\n",
+        "\n",
+        "\n",
+        " We can see the benefits of using preprocessing layers for data augmentation \n",
+        " https://www.tensorflow.org/tutorials/images/data_augmentation#use_keras_preprocessing_layers\n",
+        "\n",
+        "\n",
+        "Off the top of heads, after reading the docs, the benefits of data augmentation inside the model are :\n",
+        "* Preprocessing of images (augmenting them) happens on the GPU(much faster) rather than CPU.\n",
+        "*  Image data augmentation happens only during training, so we can still export our whole model and use it elsewhere."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YAhLwkOk5Bjr"
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers\n",
+        "from tensorflow.keras.layers.experimental import preprocessing\n",
+        "\n",
+        "# Create data augmentation stage with horizontal flipping, rotation, zooms etc\n",
+        "data_augmentation = keras.Sequential([\n",
+        "            preprocessing.RandomFlip(\"horizontal\"),\n",
+        "            preprocessing.RandomRotation(0.2),\n",
+        "            preprocessing.RandomZoom(0.2),\n",
+        "            preprocessing.RandomHeight(0.2),\n",
+        "            preprocessing.RandomWidth(0.2),\n",
+        "            preprocessing.Rescale(1./255) # Keep for models like ResNet50V2 but EfficientNet's have rescaling built-in\n",
+        "                                                                                     \n",
+        "], name=\"data_augmentation\")"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     }
   ]
