--- a/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
+++ b/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "05_transfer_learning_in_tensorflow-part2_fine_tuning",
       "provenance": [],
-      "authorship_tag": "ABX9TyOqQnu+c5HDxQds+Smwdb7v",
+      "authorship_tag": "ABX9TyMR6iqrIOzVm04U+5BGEPlb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2177,12 +2177,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OTIZZV9LEeoF",
-        "outputId": "82650d9a-9f3d-46c6-b8ee-b234f36a9645",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 511
-        }
+        },
+        "id": "OTIZZV9LEeoF",
+        "outputId": "82650d9a-9f3d-46c6-b8ee-b234f36a9645"
       },
       "source": [
         "# View a random image and compare it to its augmented version\n",
@@ -2239,41 +2239,33 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "hHEx4A9_EyX0",
-        "outputId": "bee972f7-3101-4c8d-8e05-f8b07c66e2f6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "ep1J6hjiMKUR"
       },
       "source": [
-        "train_data_1_percent.class_names"
-      ],
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['chicken_curry',\n",
-              " 'chicken_wings',\n",
-              " 'fried_rice',\n",
-              " 'grilled_salmon',\n",
-              " 'hamburger',\n",
-              " 'ice_cream',\n",
-              " 'pizza',\n",
-              " 'ramen',\n",
-              " 'steak',\n",
-              " 'sushi']"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 32
-        }
+        "## Model_1 : Feature Extraction transfer learning on 1% of the data with data augmentation\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DEYSymyXMe8T"
+      },
+      "source": [
+        "# Set up input shape and base model, freezing the base model layers\n",
+        "\n",
+        "input_shape = (224, 224, 3)\n",
+        "base_model = tf.keras.applications.EfficientNetB0(include_top=False)\n",
+        "base_model.trainable = False\n",
+        "\n",
+        "# Create input layers\n",
+        "inputs = tf.keras.layers.Input(shape=input_shape, name=\"input_layer\")\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
