--- a/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
+++ b/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "05_transfer_learning_in_tensorflow-part2_fine_tuning",
       "provenance": [],
-      "authorship_tag": "ABX9TyO7hnxt5SZfo+iod27vrKWo",
+      "authorship_tag": "ABX9TyOJAu/NNtpZ2beY9I/l3yXy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2335,11 +2335,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GxGnggz5jAht",
-        "outputId": "7cf7b81c-9e78-4f17-e784-7e2992277850",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GxGnggz5jAht",
+        "outputId": "7cf7b81c-9e78-4f17-e784-7e2992277850"
       },
       "source": [
         "# Check model summary\n",
@@ -2376,11 +2376,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dsqREv2SjJH7",
-        "outputId": "a4e76a9e-60c2-4f27-a5cb-2e84412827fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dsqREv2SjJH7",
+        "outputId": "a4e76a9e-60c2-4f27-a5cb-2e84412827fe"
       },
       "source": [
         "# Evaluate on full test data set\n",
@@ -2413,12 +2413,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EgcYfUjcjEK_",
-        "outputId": "06d32df4-7f21-4892-d52a-c262ec42ba1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 573
-        }
+        },
+        "id": "EgcYfUjcjEK_",
+        "outputId": "06d32df4-7f21-4892-d52a-c262ec42ba1a"
       },
       "source": [
         "# How do model with 1% of the data augmentation loss curves look\n",
@@ -2455,9 +2455,203 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "79gd6kihjt_e"
+      },
+      "source": [
+        "## Model 2 : feature extraction transfer learning with 10% of data and data augmentation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pG8XDXa2klsI"
+      },
+      "source": [
+        "# Get 10% of data...(uncomment if you dont have it)\n",
+        "#!wget https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
+        "#unzip_data(\"10_food_classes_10_percent.zip\")\n",
+        "\n",
+        "train_dir_10_percent = \"10_food_classes_10_percent/train\"\n",
+        "test_dir=\"10_food_classes_10_percent/test\""
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J5R8pmILlz73",
+        "outputId": "adc745ef-18df-412a-8246-abc4a38127ee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# How many images are in our directories\n",
+        "walk_through_dir(\"10_food_classes_10_percent\")\n"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "There are 2 directories and 0 images in '10_food_classes_10_percent'.\n",
+            "There are 10 directories and 0 images in '10_food_classes_10_percent/test'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/steak'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_wings'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/grilled_salmon'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ramen'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/sushi'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/fried_rice'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/ice_cream'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/hamburger'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_curry'.\n",
+            "There are 0 directories and 250 images in '10_food_classes_10_percent/test/pizza'.\n",
+            "There are 10 directories and 0 images in '10_food_classes_10_percent/train'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/steak'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_wings'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/grilled_salmon'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ramen'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/sushi'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/fried_rice'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/ice_cream'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/hamburger'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_curry'.\n",
+            "There are 0 directories and 75 images in '10_food_classes_10_percent/train/pizza'.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ovmk7v7dk_Bq",
+        "outputId": "976c9ead-38f9-4c1f-d270-40e5dd420394",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Set data inputs\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "IMG_SIZE=(224, 224)\n",
+        "train_data_10_percent = tf.keras.preprocessing.image_dataset_from_directory(train_dir_10_percent,\n",
+        "                                                                            label_mode=\"categorical\",\n",
+        "                                                                            image_size=IMG_SIZE,\n",
+        "                                                                            batch_size=32)\n",
+        "test_data = tf.keras.preprocessing.image_dataset_from_directory(test_dir, \n",
+        "                                                                label_mode=\"categorical\",\n",
+        "                                                                image_size=IMG_SIZE)"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 750 files belonging to 10 classes.\n",
+            "Found 2500 files belonging to 10 classes.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KQUd_jNRlsnk"
+      },
+      "source": [
+        "# Create model_2 with data augmentation built in \n",
+        "from tensorflow.keras  import layers\n",
+        "from tensorflow.keras.layers.experimental import preprocessing\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "\n",
+        "# Build data augmentation layer\n",
+        "data_augmentation = Sequential([\n",
+        "        preprocessing.RandomFlip(\"horizontal\"),\n",
+        "        preprocessing.RandomHeight(0.2),\n",
+        "        preprocessing.RandomWidth(0.2),\n",
+        "        preprocessing.RandomZoom(0.2),\n",
+        "        preprocessing.RandomRotation(0.2),\n",
+        "        # preprocessing.Rescaling(1./255)  #For model such as ResNet50V2, you need to rescale. Efficientnet has rescale built-in                    \n",
+        "], name=\"data_augmentation\")\n",
+        "\n",
+        "\n",
+        "# Setup input shape to our model\n",
+        "input_shape=(224, 224, 3)\n",
+        "\n",
+        "# Create  a frozen base model(also called the backbone)\n",
+        "base_model = keras.applications.EfficientNetB0(include_top=False)\n",
+        "base_model.trainable=False\n",
+        "\n",
+        "# Create the inputs and outputs(including the layers in between)\n",
+        "inputs = tf.keras.layers.Input(shape=input_shape, name=\"input_layer\")\n",
+        "\n",
+        "x = data_augmentation(inputs) # augment our training images(augmentation doesn't occur on test data)\n",
+        "x = base_model(x, training=False) # pass the augmented images to base model but keep  it in inference mode, this also insures batchnorm layers don't get updated - https://keras.io/guides/transfer_learning/#build-a-model\n",
+        "x = keras.layers.GlobalAveragePooling2D(name=\"global_average_pooling_2D\")(x)\n",
+        "outputs = keras.layers.Dense(10, activation=\"softmax\", name=\"output_layer\")(x)\n",
+        "\n",
+        "model_2 = keras.Model(inputs, outputs)\n",
+        "\n",
+        "#Compile the model\n",
+        "model_2.compile(loss=\"categorical_crossentropy\",\n",
+        "                optimizer=keras.optimizers.Adam(),\n",
+        "                metrics=[\"accuracy\"])\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U4hXG_m_qYhi",
+        "outputId": "f68d01aa-f8ca-4ea6-f9a3-188c9c2948e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model_2.summary()"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"model_2\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "input_layer (InputLayer)     [(None, 224, 224, 3)]     0         \n",
+            "_________________________________________________________________\n",
+            "data_augmentation (Sequentia (None, None, None, 3)     0         \n",
+            "_________________________________________________________________\n",
+            "efficientnetb0 (Functional)  (None, None, None, 1280)  4049571   \n",
+            "_________________________________________________________________\n",
+            "global_average_pooling_2D (G (None, 1280)              0         \n",
+            "_________________________________________________________________\n",
+            "output_layer (Dense)         (None, 10)                12810     \n",
+            "=================================================================\n",
+            "Total params: 4,062,381\n",
+            "Trainable params: 12,810\n",
+            "Non-trainable params: 4,049,571\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q-XUOSznqcsA"
       },
       "source": [
         ""
