163. Creating a ModelCheckpoint to save our model's weights during training

--- a/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
+++ b/05_transfer_learning_in_tensorflow-part2_fine_tuning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "05_transfer_learning_in_tensorflow-part2_fine_tuning",
       "provenance": [],
-      "authorship_tag": "ABX9TyOJAu/NNtpZ2beY9I/l3yXy",
+      "authorship_tag": "ABX9TyM28bbiPvaCqfMOpm/cWYWk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2482,11 +2482,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "J5R8pmILlz73",
-        "outputId": "adc745ef-18df-412a-8246-abc4a38127ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "J5R8pmILlz73",
+        "outputId": "adc745ef-18df-412a-8246-abc4a38127ee"
       },
       "source": [
         "# How many images are in our directories\n",
@@ -2528,11 +2528,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ovmk7v7dk_Bq",
-        "outputId": "976c9ead-38f9-4c1f-d270-40e5dd420394",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ovmk7v7dk_Bq",
+        "outputId": "976c9ead-38f9-4c1f-d270-40e5dd420394"
       },
       "source": [
         "# Set data inputs\n",
@@ -2611,16 +2611,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "U4hXG_m_qYhi",
-        "outputId": "f68d01aa-f8ca-4ea6-f9a3-188c9c2948e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "U4hXG_m_qYhi",
+        "outputId": "6512c88c-a1b0-4802-9a3e-98ba705c51dc"
       },
       "source": [
         "model_2.summary()"
       ],
-      "execution_count": 44,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -2649,9 +2649,41 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7wde-E0zxOFP"
+      },
+      "source": [
+        "### Creating a Model checkpoint call back\n",
+        "\n",
+        "https://www.tensorflow.org/api_docs/python/tf/keras/callbacks/ModelCheckpoint\n",
+        "\n",
+        "The ModelCheckpoint callback intermediately saves our model(the full model or just weights) during training.This is useful so we can come and start where we left off."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "Q-XUOSznqcsA"
+        "id": "cATAPtnKyLQ3"
+      },
+      "source": [
+        "# Set checkpoint path\n",
+        "checkpoint_path=\"ten_percent_model_checkpoints_weights/checkpoint.ckpt\"\n",
+        "\n",
+        "# Create a ModelCheckpoint callback that saves our model's weights only\n",
+        "checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(filepath=checkpoint_path,\n",
+        "                                                         weights_only=True,\n",
+        "                                                         save_best_only=False,\n",
+        "                                                         save_freq=\"epoch\", # Save eveery epoch\n",
+        "                                                         verbose=1) "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XbQY5yI2xYof"
       },
       "source": [
         ""
